refactor: 更换名称，请在nacos配置里面修改相关名字

--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
@@ -47,6 +47,14 @@ spring:
             data-id: admin-flow.json
             data-type: json
             rule-type: flow
+        db1:
+          nacos:
+            server-addr: @NACOS-CONFIG-ADDRESS@
+            namespace: @NACOS-NAMESPACE@
+            group-id: @NACOS-GROUP@
+            data-id: admin-degrade.json
+            data-type: json
+            rule-type: degrade
     # loadbalancer
     loadbalancer:
       nacos:
