--- a/laokou-common/laokou-common-jasypt/pom.xml
+++ b/laokou-common/laokou-common-jasypt/pom.xml
@@ -11,4 +11,15 @@
     <groupId>org.laokou</groupId>
     <artifactId>laokou-common-jasypt</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
