--- a/laokou-service/laokou-admin/laokou-admin-client/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-client/pom.xml
@@ -33,5 +33,9 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-jasypt</artifactId>
+        </dependency>
     </dependencies>
 </project>
