refactor: 删除相关代码，resource写入工具类

--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -43,6 +43,7 @@
         <module>laokou-common-i18n</module>
         <module>laokou-common-banner</module>
         <module>laokou-common-jasypt</module>
+        <module>laokou-common-ip-region</module>
     </modules>
 
 </project>
