--- a/laokou-service/laokou-module/laokou-sms/laokou-sms-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-sms/laokou-sms-server/pom.xml
@@ -34,6 +34,10 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-i18n</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-redis</artifactId>
         </dependency>
         <dependency>
@@ -59,6 +63,10 @@
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
