--- a/laokou-common/laokou-common-swagger/pom.xml
+++ b/laokou-common/laokou-common-swagger/pom.xml
@@ -36,6 +36,10 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
