--- a/laokou-common/laokou-common-mybatis-plus/pom.xml
+++ b/laokou-common/laokou-common-mybatis-plus/pom.xml
@@ -40,8 +40,8 @@
             <artifactId>laokou-common-jasypt</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
