refactor: springboot3适配rocketmq5（稍微调整一下）

--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-server/src/main/resources/application.yml
@@ -24,3 +24,7 @@ spring:
   profiles:
     # dev|test|prod
     active: @profile.active@
+rocketmq:
+  producer:
+    group: laokou-producer-group
+  name-server: 192.168.62.144:9876
