--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-client/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-client/pom.xml
@@ -33,6 +33,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
