--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -170,7 +170,7 @@
             </dependency>
             <dependency>
                 <groupId>org.laokou</groupId>
-                <artifactId>laokou-openfeign</artifactId>
+                <artifactId>laokou-common-openfeign</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
@@ -230,7 +230,7 @@
             </dependency>
             <dependency>
                 <groupId>org.laokou</groupId>
-                <artifactId>laokou-sentinel</artifactId>
+                <artifactId>laokou-common-sentinel</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
