--- a/laokou-service/laokou-auth/laokou-auth-server/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-server/pom.xml
@@ -86,7 +86,7 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-sentinel</artifactId>
+            <artifactId>laokou-common-sentinel</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
