--- a/laokou-common/laokou-common-clickhouse/pom.xml
+++ b/laokou-common/laokou-common-clickhouse/pom.xml
@@ -9,13 +9,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-common-clickhouse</artifactId>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
 </project>
