--- a/laokou-common/laokou-common-easy-captcha/pom.xml
+++ b/laokou-common/laokou-common-easy-captcha/pom.xml
@@ -11,4 +11,23 @@
     <groupId>org.laokou</groupId>
     <artifactId>laokou-common-easy-captcha</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.whvcse</groupId>
+            <artifactId>easy-captcha</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-auth-client</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
