--- a/laokou-common/laokou-common-prometheus/pom.xml
+++ b/laokou-common/laokou-common-prometheus/pom.xml
@@ -8,13 +8,7 @@
         <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-common-prometheus</artifactId>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
 </project>
