--- a/laokou-service/laokou-auth/laokou-auth-server/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-server/pom.xml
@@ -53,8 +53,8 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.whvcse</groupId>
-            <artifactId>easy-captcha</artifactId>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-easy-captcha</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
