--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-client/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-client/pom.xml
@@ -33,6 +33,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
