--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -255,7 +255,7 @@
             </dependency>
             <dependency>
                 <groupId>org.laokou</groupId>
-                <artifactId>laokou-freemarker</artifactId>
+                <artifactId>laokou-common-freemarker</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
