--- a/laokou-common/laokou-common-dynamic-router/pom.xml
+++ b/laokou-common/laokou-common-dynamic-router/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-freemarker</artifactId>
+            <artifactId>laokou-common-freemarker</artifactId>
         </dependency>
     </dependencies>
 
