--- a/laokou-common/laokou-common-mail/pom.xml
+++ b/laokou-common/laokou-common-mail/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-freemarker</artifactId>
+            <artifactId>laokou-common-freemarker</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
