--- a/laokou-common/laokou-common-sms/pom.xml
+++ b/laokou-common/laokou-common-sms/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-freemarker</artifactId>
+            <artifactId>laokou-common-freemarker</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
