feat: 增加测试类

--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -32,5 +32,6 @@
     <modules>
         <module>laokou-im</module>
         <module>laokou-flowable</module>
+        <module>laokou-test</module>
     </modules>
 </project>
