--- a/laokou-service/laokou-module/laokou-test/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-test/src/main/resources/application.yml
@@ -5,3 +5,5 @@ rocketmq:
   producer:
     group: laokou-producer-group
   name-server: laokou.org:9876
+  consumer:
+    group: laokou-consumer-group
