style: 提交测试代码

--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -26,6 +26,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.laokou</groupId>-->
+<!--            <artifactId>laokou-common-mybatis-plus</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
