--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -30,10 +30,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.laokou</groupId>-->
-<!--            <artifactId>laokou-common-mybatis-plus</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-mybatis-plus</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
