--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -2,6 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>laokou-test-netty</module>
+    </modules>
     <parent>
         <artifactId>laokou-module</artifactId>
         <groupId>org.laokou</groupId>
