--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -22,10 +22,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-rocketmq</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.laokou</groupId>-->
+<!--            <artifactId>laokou-common-rocketmq</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
