--- a/laokou-service/laokou-module/laokou-test/laokou-test-netty/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-netty/pom.xml
@@ -8,7 +8,7 @@
         <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-test-netty</artifactId>
 
     <dependencies>
