feat: 项目引入seata服务

--- a/laokou-cloud/laokou-seata/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-seata/src/main/resources/application.yml
@@ -14,6 +14,11 @@
 server:
   port: 7091
 
+jasypt:
+  encryptor:
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
+
 spring:
   application:
     name: @pom.artifactId@
