feat: 项目引入seata服务

--- a/laokou-cloud/laokou-register/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-register/src/main/resources/application.yml
@@ -76,7 +76,7 @@ server:
       enabled: true
       max-days: 30
       pattern: '%h %l %u %t "%r" %s %b %D %{User-Agent}i %{Request-Source}i'
-    basedir: logs/nacos
+    basedir: logs
 spring:
   application:
     name: @pom.artifactId@
