feat: 项目引入seata服务

--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -72,6 +72,7 @@
         <module>laokou-common-dubbo</module>
         <module>laokou-common-clickhouse</module>
         <module>laokou-common-cors</module>
+        <module>laokou-common-seata</module>
     </modules>
 
 </project>
