--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/bootstrap.yml
@@ -18,8 +18,8 @@ spring:
   cloud:
     # nacos
     nacos:
-      username: @NACOS-USERNAME@
-      password: @NACOS-PASSWORD@
+      username: ${NACOS-USERNAME}
+      password: ${NACOS-PASSWORD}
       discovery:
         server-addr: ${NACOS-DISCOVERY-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
