--- a/pom.xml
+++ b/pom.xml
@@ -219,11 +219,11 @@
                 <MYSQL-PASSWORD>ENC(d8GwIeLi+yrnFnaZFqs7s5hGuoSpupWofYMTOKhnSBA=)</MYSQL-PASSWORD>
                 <MYSQL-HOST>laokou.org</MYSQL-HOST>
                 <MYSQL-DB-NACOS>kcloud_platform_nacos</MYSQL-DB-NACOS>
-                <MYSQL-DB-SEATA>seata-config</MYSQL-DB-SEATA>
+                <MYSQL-DB-SEATA>kcloud_platform_seata</MYSQL-DB-SEATA>
                 <MYSQL-PORT>3306</MYSQL-PORT>
                 <NACOS-NAMESPACE>a61abd4c-ef96-42a5-99a1-616adee531f3</NACOS-NAMESPACE>
-                <NACOS-DISCOVERY-ADDRESS>127.0.0.1:8848</NACOS-DISCOVERY-ADDRESS>
-                <NACOS-CONFIG-ADDRESS>127.0.0.1:8848</NACOS-CONFIG-ADDRESS>
+                <NACOS-DISCOVERY-ADDRESS>1.com:8848</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>1.com:8848</NACOS-CONFIG-ADDRESS>
                 <NACOS-GROUP>LAOKOU_GROUP</NACOS-GROUP>
                 <NACOS-USERNAME>nacos</NACOS-USERNAME>
                 <NACOS-PASSWORD>nacos</NACOS-PASSWORD>
@@ -244,8 +244,8 @@
                 <MYSQL-DB-SEATA>xxx</MYSQL-DB-SEATA>
                 <MYSQL-PORT>xxx</MYSQL-PORT>
                 <NACOS-NAMESPACE>xxx111222333444555666777888999</NACOS-NAMESPACE>
-                <NACOS-DISCOVERY-ADDRESS>192.168.62.137:8848</NACOS-DISCOVERY-ADDRESS>
-                <NACOS-CONFIG-ADDRESS>192.168.62.137:8848</NACOS-CONFIG-ADDRESS>
+                <NACOS-DISCOVERY-ADDRESS>xxx</NACOS-DISCOVERY-ADDRESS>
+                <NACOS-CONFIG-ADDRESS>xxx</NACOS-CONFIG-ADDRESS>
                 <NACOS-GROUP>xxx</NACOS-GROUP>
                 <NACOS-USERNAME>xxx</NACOS-USERNAME>
                 <NACOS-PASSWORD>xxx</NACOS-PASSWORD>
