--- a/laokou-service/laokou-auth/laokou-auth-server/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-server/pom.xml
@@ -38,6 +38,10 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-shardingsphere</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-cors</artifactId>
         </dependency>
         <dependency>
